--- a/src/app/chameleon-reports/trauma-patients/trauma-patients.component.scss
+++ b/src/app/chameleon-reports/trauma-patients/trauma-patients.component.scss
@@ -602,4 +602,7 @@
       grid-template-columns: repeat(6, 1fr); /* 6 columns in large screens */
     }
   }
-  
+  .body {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
