--- a/src/app/MARAA/measurement-remarks-dialog/measurement-remarks-dialog.component.html
+++ b/src/app/MARAA/measurement-remarks-dialog/measurement-remarks-dialog.component.html
@@ -4,13 +4,20 @@
   <mat-card class="info-card">
     <mat-card-content>
       <div class="info-grid">
-        <div><strong>קוד מדד:</strong> {{ data.Measurment_ID }}</div>
-        <div><strong>תיאור:</strong> {{ data.MeasurementShortDesc }}</div>
-        <div><strong>מספר מקרה:</strong> {{ data.Case_Number }}</div>
-        <div><strong>תאריך:</strong> {{ data.Date | date: 'dd/MM/yyyy' }}</div>
-        <div><strong>מונה:</strong> {{ data.Mone }}</div>
-        <div><strong>מכנה:</strong> {{ data.Mechane }}</div>
-        <div><strong>מחלקה:</strong> {{ data.Department }}</div>
+        <div><strong>קוד מדד:</strong>
+          {{ data?.measurment_id
+             || data?.measurement_id
+             || data?.Measurment_ID
+             || data?.Measurement_ID
+             || data?.measurementCode
+             || data?.MeasurementCode
+             || data?.code }}
+        </div>        <div><strong>תיאור:</strong> {{ (data?.measurementShortDesc || data?.measurementShortDesc) }}</div>
+        <div><strong>מספר מקרה:</strong> {{ (data?.case_number || data?.caseNumber || data?.case_Number || data?.caseNumber) }}</div>
+        <div><strong>תאריך:</strong> {{ (data?.date || data?.Date) | date:'dd/MM/yyyy' }}</div>
+        <div><strong>מונה:</strong> {{ (data?.mone || data?.Mone) }}</div>
+        <div><strong>מכנה:</strong> {{ (data?.mechane || data?.Mechane) }}</div>
+        <div><strong>מחלקה:</strong> {{ (data?.department || data?.Department) }}</div>
       </div>
     </mat-card-content>
   </mat-card>
@@ -22,25 +29,23 @@
 
   <mat-checkbox [(ngModel)]="subtract" (change)="onSubtractChange()">בקשה לגרוע</mat-checkbox>
   <div class="meta">
-    <span *ngIf="data.EntryUserSubtract">
-      נרשם על ידי: {{ data.EntryUserSubtract }}
+    <span *ngIf="(data?.entryUserSubtract || data?.EntryUserSubtract)">
+      נרשם על ידי: {{ (data?.entryUserSubtract || data?.EntryUserSubtract) }}
     </span>
-    <span *ngIf="data.EntryDateSubtract">
-      בתאריך {{ data.EntryDateSubtract | date:'dd/MM/yyyy HH:mm' }}
+    <span *ngIf="(data?.entryDateSubtract || data?.EntryDateSubtract)">
+      בתאריך {{ (data?.entryDateSubtract || data?.EntryDateSubtract) | date:'dd/MM/yyyy HH:mm' }}
     </span>
   </div>
-  
+
   <mat-checkbox [(ngModel)]="aprovedMabar" (change)="onApproveChange()">מאושר מבר</mat-checkbox>
   <div class="meta">
-    <span *ngIf="data.EntryUserAprovedMabar">
-      נרשם על ידי: {{ data.EntryUserAprovedMabar }}
+    <span *ngIf="(data?.entryUserAprovedMabar || data?.EntryUserAprovedMabar)">
+      נרשם על ידי: {{ (data?.entryUserAprovedMabar || data?.EntryUserAprovedMabar) }}
     </span>
-    <span *ngIf="data.EntryDateAprovedMabar">
-      בתאריך {{ data.EntryDateAprovedMabar | date:'dd/MM/yyyy HH:mm' }}
+    <span *ngIf="(data?.entryDateAprovedMabar || data?.EntryDateAprovedMabar)">
+      בתאריך {{ (data?.entryDateAprovedMabar || data?.EntryDateAprovedMabar) | date:'dd/MM/yyyy HH:mm' }}
     </span>
   </div>
-  
-
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
