--- a/src/app/MARAA/measurement-target-manager/measurement-target-manager.component.html
+++ b/src/app/MARAA/measurement-target-manager/measurement-target-manager.component.html
@@ -2,92 +2,91 @@
 
   <div class="add-button-container" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
     <button mat-raised-button color="primary" (click)="addNewRow()">הוסף שורה חדשה</button>
-  
+
     <mat-form-field appearance="outline" style="width: 300px;">
       <mat-label>חפש</mat-label>
       <input matInput [(ngModel)]="filterValue" (keyup)="applyFilter()" placeholder="חפש בטבלה">
     </mat-form-field>
   </div>
 
-    <!-- Measurement Target Table -->
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2" dir="rtl">
-  
-<!-- MeasurementCode Column -->
-<ng-container matColumnDef="MeasurementCode">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header>קוד מדד</th>
-  <td mat-cell *matCellDef="let row">
-    <mat-form-field appearance="outline" style="width: 100%;">
-      <mat-select
-        [(ngModel)]="row.MeasurementCode"
-        placeholder="בחר קוד מדד"
-        [disabled]="!row.isNew" 
-      >
-        <mat-option *ngFor="let option of measurementOptions" [value]="option.MeasurementCode">
-          {{ option.Label }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </td>
-</ng-container>
+  <!-- Measurement Target Table -->
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2" dir="rtl">
 
+    <!-- measurementCode -->
+    <ng-container matColumnDef="measurementCode">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>קוד מדד</th>
+      <td mat-cell *matCellDef="let row">
+        <mat-form-field appearance="outline" style="width: 100%;">
+          <mat-select
+            [(ngModel)]="row.measurementCode"
+            placeholder="בחר קוד מדד"
+            [disabled]="!row.isNew">
+            <mat-option *ngFor="let option of measurementOptions" [value]="option.measurementCode">
+              {{ option.label }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </td>
+    </ng-container>
 
-  <!-- MeasurementShortDesc Column -->
-<ng-container matColumnDef="MeasurementShortDesc">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מדד</th>
-  <td mat-cell *matCellDef="let row">
-    {{ getShortDesc(row.MeasurementCode) }}
-  </td>
-</ng-container>
-      <!-- MYear Column -->
-      <ng-container matColumnDef="MYear">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>שנה</th>
-        <td mat-cell *matCellDef="let row">
-          <mat-form-field appearance="outline">
-            <input matInput type="number" [(ngModel)]="row.MYear" placeholder="שנה">
-          </mat-form-field>
-        </td>
-      </ng-container>
-  
-      <!-- MTarget Column -->
-      <ng-container matColumnDef="MTarget">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>יעד</th>
-        <td mat-cell *matCellDef="let row">
-          <mat-form-field appearance="outline">
-            <input matInput type="number" [(ngModel)]="row.MTarget" placeholder="יעד">
-          </mat-form-field>
-        </td>
-      </ng-container>
-  <!-- EntryUser Column -->
-<ng-container matColumnDef="EntryUser">
-  <th mat-header-cell *matHeaderCellDef>נכנס על ידי</th>
-  <td mat-cell *matCellDef="let row">{{ row.EntryUser }}</td>
-</ng-container>
+    <!-- measurementShortDesc (read-only, derived) -->
+    <ng-container matColumnDef="measurementShortDesc">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מדד</th>
+      <td mat-cell *matCellDef="let row">
+        {{ getShortDesc(row.measurementCode) }}
+      </td>
+    </ng-container>
 
-<!-- EntryDate Column -->
-<ng-container matColumnDef="EntryDate">
-  <th mat-header-cell *matHeaderCellDef>תאריך כניסה</th>
-  <td mat-cell *matCellDef="let row">{{ row.EntryDate | date:'dd/MM/yyyy HH:mm' }}</td>
-</ng-container>
-      <!-- Actions Column -->
-      <ng-container matColumnDef="actions" >
-        <th mat-header-cell *matHeaderCellDef>פעולות</th>
-        <td mat-cell *matCellDef="let row" style="display: flex; justify-content: center; align-items: center;">
-          <button mat-icon-button color="primary" (click)="saveTarget(row)">
-            <mat-icon>save</mat-icon>
-          </button>
-        </td>
-        
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  
-    <!-- Paginator -->
-    <mat-paginator
+    <!-- mYear -->
+    <ng-container matColumnDef="mYear">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>שנה</th>
+      <td mat-cell *matCellDef="let row">
+        <mat-form-field appearance="outline">
+          <input matInput type="number" [(ngModel)]="row.mYear" placeholder="שנה">
+        </mat-form-field>
+      </td>
+    </ng-container>
+
+    <!-- mTarget -->
+    <ng-container matColumnDef="mTarget">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>יעד</th>
+      <td mat-cell *matCellDef="let row">
+        <mat-form-field appearance="outline">
+          <input matInput type="number" [(ngModel)]="row.mTarget" placeholder="יעד">
+        </mat-form-field>
+      </td>
+    </ng-container>
+
+    <!-- entryUser -->
+    <ng-container matColumnDef="entryUser">
+      <th mat-header-cell *matHeaderCellDef>נכנס על ידי</th>
+      <td mat-cell *matCellDef="let row">{{ row.entryUser }}</td>
+    </ng-container>
+
+    <!-- entryDate -->
+    <ng-container matColumnDef="entryDate">
+      <th mat-header-cell *matHeaderCellDef>תאריך כניסה</th>
+      <td mat-cell *matCellDef="let row">{{ row.entryDate | date:'dd/MM/yyyy HH:mm' }}</td>
+    </ng-container>
+
+    <!-- actions -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>פעולות</th>
+      <td mat-cell *matCellDef="let row" style="display: flex; justify-content: center; align-items: center;">
+        <button mat-icon-button color="primary" (click)="saveTarget(row)">
+          <mat-icon>save</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <!-- Paginator -->
+  <mat-paginator
     [pageSize]="5"
     [pageSizeOptions]="[5, 10, 20]"
-    showFirstLastButtons
-  ></mat-paginator>
-  </div>
-  
+    showFirstLastButtons>
+  </mat-paginator>
+</div>
